namespace Po.VicTranslate.Client.Models;

public class TranslationRequest
{
    public string? Text { get; set; }
}
