classDiagram
    class Lyrics {
        +int Id
        +string Title
        +string Artist
        +string LyricsText
        +bool IsCockney
    }
    
    class TranslationRequest {
        +string Text
    }
    
    class TranslationResponse {
        +string OriginalText
        +string TranslatedText
    }
    
    class ITranslationService {
        <<interface>>
        +TranslateAsync() Task
    }
    
    class ILyricsService {
        <<interface>>
        +GetAllAsync() Task
        +AddAsync() Task
        +UpdateAsync() Task
        +DeleteAsync() Task
    }
    
    class IAudioSynthesisService {
        <<interface>>
        +SynthesizeAsync() Task
    }
    
    ITranslationService ..> TranslationRequest : uses
    ITranslationService ..> TranslationResponse : returns
    ILyricsService ..> Lyrics : manages
